fix: cluster-icon's badge (events-count) is cropped in clusters-menu

--- a/src/renderer/components/+cluster-settings/cluster-icon.scss
+++ b/src/renderer/components/+cluster-settings/cluster-icon.scss
@@ -26,5 +26,6 @@
     right: 0;
     bottom: 0;
     margin: -$padding * 1.5;
+    font-size: $font-size-small;
   }
 }
